# box3d

./: .gitignore  CMakeLists.txt  README.md
box3d/: CMakeLists.txt
box3d/include/: box3d.h  box3d.hpp
box3d/include/collision/: b3CubeContact.hpp  b3_aabb.hpp  b3_broad_phase.hpp  b3_bvh.hpp  b3_collision.hpp  b3_collision_algorithm_create_func.hpp  b3_collision_config.hpp  b3_contact.hpp  b3_contact_manager.hpp  b3_cube_cone_contact.hpp  b3_cube_contact.hpp  b3_cube_cylinder_contact.hpp  b3_cube_sphere_contact.hpp  b3_dispatcher.hpp  b3_distance.hpp  b3_distance_proxy.hpp  b3_fixture.hpp  b3_gjk_distance.hpp  b3_manifold_result.hpp  b3_octree.hpp  b3_persistent_manifold.hpp  b3_persistent_manifold_point.hpp  b3_plane_cone_contact.hpp  b3_plane_cube_contact.hpp  b3_plane_sphere_contact.hpp  b3_rigid_fixture.hpp  b3_sphere_contact.hpp  b3_time_of_impact.hpp
box3d/include/common/: b3_allocator.hpp  b3_block_allocator.hpp  b3_common.hpp  b3_draw.hpp  b3_time_step.hpp  b3_types.hpp  b3_world_callback.hpp
box3d/include/dynamics/: b3_body.hpp  b3_body_affine.hpp  b3_body_def.hpp  b3_body_rigid.hpp  b3_contact.hpp  b3_contact_manager.hpp  b3_inertia.hpp  b3_island.hpp  b3_mass_property.hpp  b3_pose.hpp  b3_rigid_body.hpp  b3_transform.hpp  b3_transform_util.hpp  b3_world.hpp  library.h
box3d/include/fem/: test.hpp
box3d/include/geometry/: b3_cone_shape.hpp  b3_cube_shape.hpp  b3_cylinder_shape.hpp  b3_geometry.hpp  b3_mesh.hpp  b3_plane_shape.hpp  b3_shape.hpp  b3_sphere_shape.hpp
box3d/include/math/: b3_mat1212.hpp  b3_mat33.hpp  b3_math.hpp  b3_math_op.hpp  b3_matrix.hpp  b3_matrix_operation.hpp  b3_min_max.hpp  b3_quat.hpp  b3_quaternion.hpp  b3_vec12.hpp  b3_vec2.hpp  b3_vec3.hpp  b3_vector.hpp
box3d/include/optim/: optim.hpp
box3d/include/solver/: b3_affine_opt_solver.hpp  b3_affine_solver.hpp  b3_bfgs.hpp  b3_contact_constraint.hpp  b3_contact_solver.hpp  b3_contact_solver_gGS_substep.hpp  b3_contact_solver_jacobi.hpp  b3_contact_solver_substep.hpp  b3_contact_solver_zhb.hpp  b3_contact_velocity_solver.hpp  b3_dentzig.hpp  b3_lemke.hpp  b3_si_solver.hpp  b3_si_solver_lxj.hpp  b3_solver.hpp  b3_solver_affine.hpp  b3_solver_body.hpp  b3_solver_constraint.hpp  b3_solver_factory.hpp  b3_solver_gGS_substep_split_island.hpp  b3_solver_gr.hpp  b3_solver_jacobi.hpp  b3_solver_lxj.hpp  b3_solver_substep.hpp  b3_solver_substep_split_island.hpp  b3_solver_verlet.hpp  b3_solver_zhb.hpp  b3_velocity_solver.hpp  rolling_spining_friction_solver.hpp
box3d/include/utils/: b3_gui_viewer.hpp  b3_igl_viewer_ext.hpp  b3_imgui_ext.hpp  b3_io.hpp  b3_json.hpp  b3_log.hpp  b3_timer.h  b3_timer.hpp  b3_types.hpp
box3d/src/collision/: b3_aabb.cpp  b3_broad_phase.cpp  b3_bvh.cpp  b3_collide.cpp  b3_collide_cone.cpp  b3_collide_cube.cpp  b3_collide_cube_bullet.cpp  b3_collide_plane.cpp  b3_collide_sphere.cpp  b3_collision.cpp  b3_collision_config.cpp  b3_contact.cpp  b3_contact_manager.cpp  b3_cube_cone_contact.cpp  b3_cube_contact.cpp  b3_cube_cylinder_contact.cpp  b3_cube_sphere_contact.cpp  b3_dispatcher.cpp  b3_distance.cpp  b3_distance_proxy.cpp  b3_fixture.cpp  b3_gjk_distance.cpp  b3_manifold_result.cpp  b3_octree.cpp  b3_persistent_manifold.cpp  b3_plane_cone_contact.cpp  b3_plane_cube_contact.cpp  b3_plane_sphere_contact.cpp  b3_sphere_contact.cpp  b3_time_of_impact.cpp
box3d/src/common/: b3_block_allocator.cpp  b3_draw.cpp
box3d/src/dynamics/: b3_body.cpp  b3_body_affine.cpp  b3_body_def.cpp  b3_body_rigid.cpp  b3_contact.cpp  b3_contact_manager.cpp  b3_inertia.cpp  b3_island.cpp  b3_pose.cpp  b3_rigid_body.cpp  b3_world.cpp  library.cpp
box3d/src/geometry/: b3_cone_shape.cpp  b3_cube_shape.cpp  b3_cylinder_shape.cpp  b3_mesh.cpp  b3_plane_shape.cpp  b3_shape.cpp  b3_sphere_shape.cpp
box3d/src/solver/: b3_affine_opt_solver.cpp  b3_affine_solver.cpp  b3_bfgs.cpp  b3_contact_solver.cpp  b3_contact_solver_gGS_substep.cpp  b3_contact_solver_jacobi.cpp  b3_contact_solver_substep.cpp  b3_contact_solver_zhb.cpp  b3_contact_velocity_solver.cpp  b3_contact_velocity_solver_substep.cpp  b3_lemke.cpp  b3_si_solver.cpp  b3_si_solver_copy.cpp  b3_si_solver_delete.cpp  b3_si_solver_lxj.cpp  b3_si_solver_verlet.cpp  b3_solver.cpp  b3_solver_gr.cpp  (+6 more)
test/: CMakeLists.txt  draw.cpp  draw.hpp  imgui_impl_opengl3.cpp  main.cpp  settings.cpp  settings.hpp  test_all_class_size.cpp  test_app.cpp  test_bvh.cpp  test_easy_world.cpp  test_gjk_distance.cpp  test_mesh_read.cpp  test_sphere_view_data.cpp  utils.cpp  utils.hpp
test/include/: animation_generator.hpp  auxiliary_shape.hpp  b3_category_menu.hpp  b3_gui_viewer.hpp  b3_scene_test.hpp  b3_sim_app.hpp  b3_test.hpp  b3_unit_test.hpp  body_info_generator.hpp  camera.hpp  category_menu.hpp  gl_common.hpp  gl_render_lines.hpp  gl_render_object.hpp  gl_render_points.hpp  gl_render_triangles.hpp  gui.hpp  gui_viewer.hpp  imgui_ext.hpp  mesh_list_view.hpp  scene_test.hpp  sim_app.hpp  test.hpp  test_sphere_dropping.hpp  unit_test.hpp
test/src/: animation_generator.cpp  auxiliary_shape.cpp  b3_gui_viewer.cpp  b3_scene_test.cpp  b3_sim_app.cpp  b3_test.cpp  b3_unit_test.cpp  box_rest.cpp  camera.cpp  demo_box_pyramid.cpp  gl_render_lines.cpp  gl_render_object.cpp  gl_render_points.cpp  gl_render_triangles.cpp  gui_viewer.cpp  imgui_ext.cpp  scene_test.cpp  scene_test_affine_cube_dropping.cpp  scene_test_affine_ground.cpp  scene_test_affine_sphere_collide.cpp  scene_test_affine_sphere_dropping.cpp  scene_test_affine_sphere_rest.cpp  scene_test_box_rest.cpp  scene_test_cube_collision.cpp  scene_test_cube_dropping.cpp  scene_test_cube_friction.cpp  scene_test_cube_rest.cpp  scene_test_cube_stack.cpp  scene_test_dropping.cpp  scene_test_newtons_cradle.cpp  scene_test_plane_sphere_collide.cpp  scene_test_sphere_cube_collide.cpp  scene_test_sphere_dropping_no_gravity.cpp  scene_test_sphere_friction.cpp  scene_test_sphere_stack.cpp  scene_test_sphere_stack_dropping.cpp  scene_test_symmetry_collision.cpp  scene_test_vs_box_rotation.cpp  scene_test_vs_box_rotation_no_gravity.cpp  scene_test_vs_sphere_collision.cpp  (+49 more)
test/unit_test/: test_sphere_manifold.cpp
(+79 files in other folders)
